# otomoto-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/otomoto_parser/: __init__.py  aggregation.py  history_report.py  otomoto_vehicle_identity.py  parser.py
src/otomoto_parser/v1/: __init__.py  __main__.py  _aggregation_common.py  _aggregation_excel.py  _aggregation_metrics.py  _aggregation_records.py  _history_client.py  _history_common.py  _history_transport.py  _parser_cli.py  _parser_common.py  _parser_filters.py  _parser_html.py  _parser_items.py  _parser_retry.py  _parser_runner.py  _parser_runtime.py  _parser_storage.py  aggregation.py  history_report.py  otomoto_vehicle_identity.py  parser.py
src/otomoto_parser/v2/: __init__.py  _app_cli.py  _app_frontend.py  _app_geocode.py  _app_models.py  _app_report_routes.py  _app_routes.py  _service_analysis.py  _service_analysis_helpers.py  _service_analysis_payload.py  _service_analysis_payload_common.py  _service_analysis_payload_support.py  _service_analysis_report_findings.py  _service_analysis_report_normalization.py  _service_analysis_report_payload.py  _service_analysis_report_utils.py  _service_categories.py  _service_common.py  _service_core.py  _service_json.py  _service_listing_helpers.py  _service_reports.py  _service_reports_lookup_runtime.py  _service_reports_runtime.py  _service_request_run.py  _service_store.py  app.py  service.py
tests/: test_aggregation.py  test_entrypoints.py  test_history_report.py  test_otomoto_vehicle_identity.py  test_parser.py  test_v1_parser_cli.py  test_v1_parser_retry.py  test_v1_support_modules.py  test_v2_app.py  test_v2_app_cli.py  test_v2_app_support.py  test_v2_service.py  test_v2_service_analysis_helpers.py  test_v2_service_analysis_payload.py
tests/fixtures/: aggregation_sample.jsonl  graphql_page1.json  graphql_page2.json  page1.html  page2.html  ua_page.html
tools/: check_frontend_style_tokens.py  check_maintainability.py  check_source_coverage.py
(+74 files in other folders)
