[project]
name = "otomoto-parser"
version = "0.1.0"
description = "Simple pagination parser using Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.46.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
otomoto-parser = "otomoto_parser.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
