[project]
name = "otomoto-parser"
version = "0.1.0"
description = "GraphQL-based pagination parser for Otomoto"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
otomoto-parser = "otomoto_parser.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
